@@ -5,7 +5,7 @@ MIDlet-Version: ###VERSION-JAVA###
 MIDlet-Vendor: Jimm Project
 MIDlet-Jar-URL: Jimm.jar
 MIDlet-Jar-Size: ###SIZE###
-MicroEdition-Profile: MIDP-1.0
+MicroEdition-Profile: ###MIDP-PROFILE###
 MicroEdition-Configuration: CLDC-1.0
 MIDlet-Description: J2ME ICQ clone
 MIDlet-Info-URL: http://jimm.sourceforge.net/
