@@ -1,0 +1,224 @@
+/*******************************************************************************
+ Jimm - Mobile Messaging - J2ME ICQ clone
+ Copyright (C) 2003-04  Jimm Project
+
+ This program is free software; you can redistribute it and/or
+ modify it under the terms of the GNU General Public License
+ as published by the Free Software Foundation; either version 2
+ of the License, or (at your option) any later version.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program; if not, write to the Free Software
+ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ ********************************************************************************
+ File: src/jimm/res/Text_HE.java
+ Version: ###VERSION###  Date: ###DATE###
+ Author(s): Manuel Linsmayer, Andreas Rossbacher, Guy Aroshas
+ *******************************************************************************/
+
+
+// #sijapp cond.if lang_HE is "true" #
+
+// <insert="		resources.put("ID_x", "res_x");">
+
+package jimm.res;
+
+
+import jimm.util.ResourceBundle;
+
+
+public class Text_HE extends ResourceBundle
+{
+
+
+	public Text_HE()
+	{
+
+		resources.put("ID_x", "");
+		resources.put(".", ".");
+		resources.put("about", "אודות");
+		resources.put("about_info", "Jimm - Mobile Messaging\n\nICQ client for J2ME\nVersion ###VERSION###\nSee http://jimm.sourceforge.net/");
+		resources.put("account", "חשבון");
+		resources.put("add_user", "הוסף משתמש");
+		resources.put("add_to_list", "הוסף לרשימה");
+		resources.put("age", "גיל");
+		resources.put("async", "Async");
+		resources.put("auth", "בייט");
+		resources.put("back", "חזרה");
+		resources.put("beep", "צפצוף");
+		resources.put("byte", "בייט");
+		resources.put("cancel", "בטל");
+		resources.put("city", "עיר");
+		resources.put("close", "סגור");
+		resources.put("conn_type", "סוג חיבור");
+		resources.put("connect", "התחבר");
+		resources.put("connecting", "מתחבר");
+		resources.put("contact_list", "רשימה");
+		resources.put("cp1251", "Use CP1251 hack?");
+		resources.put("cpd", "עלות ליום");
+		resources.put("cpp", "עלות למסגרת");
+		resources.put("currency", "מטבע");
+		resources.put("delete_chat", "מחק הסטוריה");
+		resources.put("deny", "דחה אישור");
+		resources.put("denyedby", "בקשתך להוספה נדחתה על ידי : ");
+		resources.put("user_menu", "תפריט משתמש");
+		resources.put("disconnect", "התנתק");
+		resources.put("disconnecting", "מתנתק");
+		resources.put("display_advertisement", "להציג טיפים?");
+		resources.put("display_date", "להציג תאריך במסך מעבר?");
+		resources.put("email", "דואל");
+		resources.put("error", "שגיאה");
+		resources.put("exit", "יציאה");
+		resources.put("female", "בת");
+		resources.put("firstname", "שם פרטי");
+		resources.put("gender", "מין");
+		resources.put("grant", "תן אישור");
+		resources.put("grantedby", "בקשתך להוספה התקבלה על ידי : ");
+		resources.put("hide_offline", "החבא משתמשים מנותקים");
+		resources.put("info", "מידע");
+		resources.put("kb", "קילובייט");
+		resources.put("keep_chat", "לשמור הסטוריה?");
+		resources.put("keep_conn_alive", "להחזיק חיבור חי?");
+		resources.put("keylock_enable", "נעל מקשים");
+		resources.put("keylock_enabled", "מקשים נעולים");
+		resources.put("keyword", "מילת מפתח");
+		resources.put("language", "שפה");
+		resources.put("lang_BR", "פורטוגזית");
+		resources.put("lang_CZ", "צ'כית");
+		resources.put("lang_DE", "גרמנית");
+		resources.put("lang_EN", "אנגלית");
+		resources.put("lang_ES", "ספרדית");
+		resources.put("lang_HE", "עברית");
+		resources.put("lang_IT", "איטלקית");
+		resources.put("lang_LT", "ליטאית");
+		resources.put("lang_RU", "רוסית");
+		resources.put("lang_SE", "שוודית");
+		resources.put("lang_SR", "??????");
+		resources.put("lastname", "שם משפחה");
+		resources.put("loading", "טוען");
+		resources.put("male", "בן");
+		resources.put("me", "אני");
+		resources.put("menu", "תפריט ראשי");
+		resources.put("msg_sound_file_name", "צליל הודעה");
+		resources.put("message_notification", "התראת הודעה");
+		resources.put("message", "הודעה");
+		resources.put("message_from", "הודעה מאת");
+		resources.put("name", "שם");
+		resources.put("next", "הבא");
+		resources.put("nick", "כינוי");
+		resources.put("no", "לא");
+		resources.put("no_results", "אין תוצאות");
+		resources.put("not_implemented", "פונקציה לא נכללת");
+		resources.put("noreason", "לא ניתנה סיבה");
+		resources.put("notice", "התראה");
+		resources.put("nr", "Nr");
+		resources.put("ok", "אישור");
+		resources.put("once_a_session", "פעם אחת בחיבור");
+		resources.put("onl_notification", "התראה על התחברות משתמש");
+		resources.put("onl_sound_file_name", "צליל התחברות");
+		resources.put("only_online", "הצג משתמשים מחוברים");
+		resources.put("options", "אפשרויות");
+		resources.put("options_account", "חשבון");
+		resources.put("options_cost", "עלות");
+		resources.put("options_effect", "ייתכן שחיבור מחדש יהיה הכרחי להשפעת השינויים");
+		resources.put("options_interface", "ממשק");
+		resources.put("options_network", "רשת");
+		resources.put("options_other", "אחר");
+		resources.put("password", "סיסמא");
+		resources.put("plength", "אורך מסגרת בקילובייטים");
+		resources.put("plsauthme", "היי ! אנא אשר את בקשתי להוסיף אותך לרשימה.");
+		resources.put("prev", "הקודם");
+		resources.put("reason", "סיבה");
+		resources.put("remove", "הסר מהרשימה");
+		resources.put("reply", "השב");
+		resources.put("requauth", "בקש אישור");
+		resources.put("requ", "הכרחי");
+		resources.put("requno", "לא הכרחי");
+		resources.put("reset", "אפס");
+		resources.put("results", "תוצאות");
+		resources.put("save", "שמור");
+		resources.put("search_user", "חפש משתמש");
+		resources.put("send", "שלח");
+		resources.put("send_message", "הודעה חדשה");
+		resources.put("send_url", "לינק חדש");
+		resources.put("server", "שרת");
+		resources.put("server_host", "כתובת שרת");
+		resources.put("server_port", "פורט");
+		resources.put("session", "חיבור");
+		resources.put("set_status", "קבע סטטוס");
+		resources.put("since", "מאז");
+		resources.put("sound", "קובץ צליל");
+		resources.put("sort_by", "סדר רשימה לפי");
+		resources.put("sort_by_name", "לפי שם");
+		resources.put("sort_by_status", "לפי סטטוס");
+		resources.put("status_away", "Away");
+		resources.put("status_chat", "Free for Chat");
+		resources.put("status_dnd", "Do Not Disturb");
+		resources.put("status_invisible", "Invisible");
+		resources.put("status_na", "Not Available");
+		resources.put("status_occupied", "Occupied");
+		resources.put("status_offline", "Offline");
+		resources.put("status_online", "Online");
+		resources.put("sysnotice", "התראת מערכת");
+		resources.put("traffic", "תנועה");
+		resources.put("uin", "מספר");
+		resources.put("url", "לינק");
+		resources.put("user_add", "הוסף משתמש");
+		resources.put("user_search", "חפש משתמש");
+		resources.put("vibration", "רטט");
+		resources.put("wait", "אנא המתן");
+		resources.put("warning", "אזהרה");
+		resources.put("wantsyourauth", "מבקש אישור. סיבה : ");
+		resources.put("whichgroup", "קבוצה?");
+		resources.put("yes", "כן");
+		resources.put("youwereadded", "התווספת לרשימה על ידי : ");
+		resources.put("error_100", "Unknown error (#100.EXT)");
+		resources.put("error_110", "Multiple logins on same UIN (#110.EXT)");
+		resources.put("error_111", "Bad password (#111.EXT)");
+		resources.put("error_112", "Non-existant UIN (#112.EXT)");
+		resources.put("error_113", "Too many clients from same IP (#113.EXT)");
+		resources.put("error_114", "Rate exceeded (#114.EXT)");
+		resources.put("error_115", "Contact list could not be parsed (#115.EXT)");
+		resources.put("error_116", "Offline message could not be parsed (#116.EXT)");
+		resources.put("error_117", "Empty UIN and/or password (#117.EXT)");
+		resources.put("error_118", "No response from server (#118.EXT)");
+		resources.put("error_120", "An I/O error occured (#120.EXT)");
+		resources.put("error_121", "Requested TCP connection cannot be made (#121.EXT)");
+		resources.put("error_122", "Specified server host and/or port is invalid (#122.EXT)");
+		resources.put("error_123", "Connection has not been established (#123.EXT)");
+		resources.put("error_124", "Input stream is out of sync (#124.EXT)");
+		resources.put("error_130", "FLAP header could not be parsed (#130.EXT)");
+		resources.put("error_131", "Unknown channel (#131.EXT)");
+		resources.put("error_132", "Connect channel packet  could not be parsed (#132.EXT)");
+		resources.put("error_133", "SNAC header could not be parsed (#133.EXT)");
+		resources.put("error_134", "Error channel packet could not be parsed (#134.EXT)");
+		resources.put("error_135", "Disconnect channel packet could not be parsed (#135.EXT)");
+		resources.put("error_136", "Ping channel packet could not be parsed (#136.EXT)");
+		resources.put("error_137", "Old ICQ protocol header could not be parsed (#137.EXT)");
+		resources.put("error_140", "Requested action cannot be queued for execution at this time (#140.EXT)");
+		resources.put("error_150", "Received message could not be understood (#150.EXT)");
+		resources.put("error_151", "Received type 1 message could not be understood (#151.EXT)");
+		resources.put("error_152", "Received type 2 message could not be understood (#152.EXT)");
+		resources.put("error_153", "Received type 4 message could not be understood (#153.EXT)");
+		resources.put("error_154", "Error updating your contact list (#154.EXT)");
+		resources.put("error_155", "Object is already in your server list (#155.EXT)");
+		resources.put("error_156", "Error while adding. Try again (#156.EXT)");
+		resources.put("error_157", "No more elements of this type allowed (#157.EXT)");
+		resources.put("error_158", "You did try to add an ICQ contact to an AIM list (#158.EXT)");
+		resources.put("error_159", "Server did not answer on search request. Try again (#159.EXT)");
+		resources.put("error_160", "Error while searching (#160.EXT)");
+		resources.put("error_170", "Possibly not enough heap memory available (#160.EXT)");
+		resources.put("error_171", "Could not fetch meta info (#161.EXT)");
+
+	}
+
+
+}
+
+
+// #sijapp cond.end #
