@@ -69,6 +69,9 @@ public class ResourceBundle
 		// #sijapp cond.if lang_SR is "true" #
 		"SR",
 		// #sijapp cond.end #
+		// #sijapp cond.if lang_HE is "true" #
+		"HE",
+		// #sijapp cond.end #
 	};
 
 
