@@ -124,6 +124,9 @@ ________________________________________________________________________________
 VERSION 0.2.4
 
   * NEW FEATURE: Current online status can be seen in main menu when online
+  * NEW FEATURE: Contact list can be shown even if offline
+  * Before removing a contact form the list the user is asked if he really wants to
+  * Sending a message now leads to the chat history not to the contact list
   * Added Hebrew translation
   * Added back button to the status selet screen
   * Bugfix: City field is now taken itno account which searching
